--- a/package.json
+++ b/package.json
@@ -47,6 +47,9 @@
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~4.1.2",
-    "ngx-toastr": "13.2.0"
+    "ngx-toastr": "13.2.0",
+    "@fortawesome/angular-fontawesome": "^0.8.2",
+    "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@fortawesome/free-solid-svg-icons": "^5.15.2"
   }
 }
