--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@fortawesome/angular-fontawesome": "^0.8.2",
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
+    "@tinymce/tinymce-angular": "^4.2.1",
     "bootstrap": "^4.6.0",
     "ngx-webstorage": "^7.0.1",
     "ngx-webstorage-service": "^4.1.0",
